<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:elevation="@dimen/padding_x_large">

            <RelativeLayout
                android:id="@+id/rl_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_200">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="@dimen/padding_large"
                    app:cardCornerRadius="@dimen/padding_x_small">

                    <EditText
                        android:id="@+id/et_get_city_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/search_places"
                        android:drawableStart="@drawable/ic_baseline_search_24"
                        android:drawablePadding="@dimen/padding_large"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:paddingStart="@dimen/padding_large"
                        android:paddingEnd="@dimen/padding_large"
                        android:textColor="@color/black"
                        android:drawableTint="@color/black"
                        android:background="@color/white"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:id="@+id/rl_sub_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/cv_toolbar"   >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_weather_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/snow_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_large"
                    android:layout_marginStart="@dimen/padding_x_large"
                    android:orientation="vertical"  >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_date_and_time"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_large"
                        android:text="@string/demo_data" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:id="@+id/tv_day_max_temp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:text="@string/day"
                            android:textSize="@dimen/text_large" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/tv_day_min_temp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:text="@string/day"
                            android:textSize="@dimen/text_large" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/tv_temp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:text="@string/main_temp"
                            android:textSize="@dimen/text_super_large" />

                       <ImageView
                           android:layout_width="100dp"
                           android:layout_height="100dp"
                           android:layout_marginTop="@dimen/padding_large"
                           android:layout_marginEnd="@dimen/padding_large"
                           android:id="@+id/iv_weather_icon"
                           android:src="@drawable/clear" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/tv_feels_like"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:text="@string/feels_alike"
                            android:textSize="@dimen/text_large" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:id="@+id/tv_weather_type"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/white"
                            android:text="@string/weather_type"
                            android:textSize="@dimen/text_large" />

                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>